[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/imgs/ufo.png" type="Texture" id=1]
[ext_resource path="res://objects/UFO.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.58477
height = 8.53497

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 65.25, 49.25 )

[sub_resource type="Animation" id=4]
resource_name = "blink_back_to_road"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "blink_to_road"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MobsDetecter/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "catch_mob"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("LightOutline:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightOutline:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 0 ), Vector2( 16, 72 ), Vector2( 16, 72 ), Vector2( 16, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "transport_mob_to_ufo"
}, {
"args": [  ],
"method": "transport_mob_ended"
} ]
}

[node name="UFO" type="KinematicBody2D" groups=[
"mob",
]]
z_index = 12
collision_layer = 8
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Aim" type="Position2D" parent="."]
position = Vector2( 0, 11 )

[node name="LightOutline" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = 11.0
margin_right = 8.0
margin_bottom = 11.0
rect_min_size = Vector2( 16, 0 )
color = Color( 0.265869, 1, 0.03125, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light" type="ColorRect" parent="LightOutline"]
margin_left = 2.0
margin_right = 14.0
rect_min_size = Vector2( 12, 0 )
color = Color( 0.576471, 1, 0.423529, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LightTween" type="Tween" parent="LightOutline"]

[node name="LightOutlineTween" type="Tween" parent="LightOutline"]

[node name="MobsDetecter" type="Area2D" parent="."]
position = Vector2( 0, 72 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MobsDetecter"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink_back_to_road = SubResource( 4 )
anims/catch_mob = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CatchColdownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="MobsDetecter" to="." method="_on_MobsDetecter_body_entered"]
[connection signal="body_exited" from="MobsDetecter" to="." method="_on_MobsDetecter_body_exited"]
[connection signal="timeout" from="CatchColdownTimer" to="." method="_on_CatchColdownTimer_timeout"]
